WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294647
[JSC] Throw OOM error when input typed array for filter is too large
https://bugs.webkit.org/show_bug.cgi?id=294647
Summary
[JSC] Throw OOM error when input typed array for filter is too large
Yusuke Suzuki
Reported
2025-06-17 18:31:08 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-17 18:31:18 PDT
<
rdar://problem/153693238
>
Yusuke Suzuki
Comment 2
2025-06-17 18:32:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46880
Yusuke Suzuki
Comment 3
2025-06-17 18:33:02 PDT
<
rdar://problem/153523050
>
EWS
Comment 4
2025-06-17 20:05:54 PDT
Committed
296353@main
(0cf717329d93): <
https://commits.webkit.org/296353@main
> Reviewed commits have been landed. Closing PR #46880 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug