[JSC] Throw OOM error when input typed array for filter is too large https://bugs.webkit.org/show_bug.cgi?id=294647 rdar://153523050

Reviewed by Sosuke Suzuki.

Use tryReserveInitialCapacity to gracefully throw an OOM error when it
is too large.

* JSTests/stress/typed-array-filter-oom.js: Added.
(f1.f3):
(f1):
* Source/JavaScriptCore/runtime/JSGenericTypedArrayViewPrototypeFunctions.h:
(JSC::genericTypedArrayViewProtoFuncFilter):

Canonical link: https://commits.webkit.org/296353@main